Watchlist fungerer nå

--- a/Code/GUI/analyst/WatchlistPanel.form
+++ b/Code/GUI/analyst/WatchlistPanel.form
@@ -23,4 +23,7 @@
       </scrollpane>
     </children>
   </grid>
+  <inspectionSuppressions>
+    <suppress inspection="NoLabelFor"/>
+  </inspectionSuppressions>
 </form>
