Watchlist fungerer nå

--- a/Code/GUI/analyst/WatchlistPanel.form
+++ b/Code/GUI/analyst/WatchlistPanel.form
@@ -54,4 +54,7 @@
       </grid>
     </children>
   </grid>
+  <inspectionSuppressions>
+    <suppress inspection="NoLabelFor"/>
+  </inspectionSuppressions>
 </form>
