--- a/Code/GUI/analyst/WatchlistPanel.form
+++ b/Code/GUI/analyst/WatchlistPanel.form
@@ -21,7 +21,7 @@
           </component>
         </children>
       </scrollpane>
-      <component id="de0b4" class="javax.swing.JComboBox" binding="selectSportComboBox">
+      <component id="de0b4" class="javax.swing.JComboBox" binding="comboBox1">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
