--- a/Code/GUI/admin/Profile.form
+++ b/Code/GUI/admin/Profile.form
@@ -158,6 +158,7 @@
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="20"/>
           <text value="Last name:"/>
         </properties>
       </component>
