Added confirm new password

--- a/HHManager/src/main/webapp/CSS/endrepassord.css
+++ b/HHManager/src/main/webapp/CSS/endrepassord.css
@@ -6,6 +6,10 @@
     margin-top: 10px;
     margin-bottom: 10px;
 }
+.medlemmer2{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
 #text{
     border-style: solid;
