--- a/HHManager/src/main/webapp/CSS/oppgjør.css
+++ b/HHManager/src/main/webapp/CSS/oppgjør.css
@@ -1,3 +1,7 @@
-.størrelse{
-    margin-top: 10px;
+.balanse{
+    width: 600px;
+    height: 900px;
+    margin-right: 200px;
+    margin-left: 100px;
+    margin-top: 52px;
 }
