gjorde overskriftene til utlegg bold

--- a/HHManager/src/main/webapp/CSS/handlelister.css
+++ b/HHManager/src/main/webapp/CSS/handlelister.css
@@ -73,3 +73,11 @@ h1 {
 #nyhandel {
     text-align: center;
 }
+
+#overskrift1 {
+    font-weight: bold;
+}
+
+#overskrift2 {
+    font-weight: bold;
+}
