Endret gjøremål til gjoremaal og oppgjør til oppgjor sitewide

--- a/HHManager/src/main/webapp/CSS/gjøremål.css
+++ b/HHManager/src/main/webapp/CSS/gjøremål.css
@@ -1,4 +1,4 @@
-.nytt-gjøremål{
+.nytt-gjoremaal{
     width: 300px;
     heigth: 300px;
     margin-right: 100px;
@@ -6,7 +6,7 @@
     margin-top: 52px;
 }
 
-.eksisterende-gjøremål{
+.eksisterende-gjoremaal{
     width: 300px;
     heigth: 300px;
     margin-left: 50px;
