FIKSA ALT TILBAKE TIL TIDLIGERE VERSJON ETTER MERGE CRAZINESSSSSSS

--- a/HHManager/src/main/webapp/CSS/gjoremaal.css
+++ b/HHManager/src/main/webapp/CSS/gjoremaal.css
@@ -1,4 +1,4 @@
-.nytt-gjoremaal{
+.nytt-gjøremål{
     width: 300px;
     heigth: 300px;
     margin-right: 100px;
@@ -6,7 +6,7 @@
     margin-top: 52px;
 }
 
-.eksisterende-gjoremaal{
+.eksisterende-gjøremål{
     width: 300px;
     heigth: 300px;
     margin-left: 50px;
