endret og ferdiggjort html og css for profil

--- a/HHManager/src/main/webapp/CSS/profil.css
+++ b/HHManager/src/main/webapp/CSS/profil.css
@@ -13,13 +13,32 @@
     width:200px;
     margin-top:20px;
 }
-.formater{
-    width: 1%;
-    float: left;
-    height: 80px;
+
+#navnknapp {
+    margin-top: 10px;
+    margin-left: 89px;
 }
-.formater2{
-    width: 100%;
-    float: left;
-    height: 300px;
+
+#epostknapp {
+    margin-top: 10px;
+    margin-right: 3px;
 }
+
+#accordion {
+    margin-right: 10px;
+}
+
+.h1 {
+    margin-bottom: 10px;
+}
+
+.well-sm {
+    margin-left: 89px;
+}
+
+#passord {
+    margin-top: 10px;
+    margin-left: 100px;
+}
+
+
